Updated HTML Content

--- a/CardioHealth/Resources/HTMLContent/symptoms.html
+++ b/CardioHealth/Resources/HTMLContent/symptoms.html
@@ -2,7 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Symptoms</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Symptoms adn Diagnosis</title>
 
 <style type="text/css">
 
@@ -23,7 +24,7 @@ a:active {
 	<td width="100%" align="center" valign="top"  style="background-color:#FFFFFF; padding:0px 15px 0px 15px;">
     	<table align="left" cellpadding="0" cellspacing="0" style="border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;padding:0px; background-color:#FFFFFF; border:none;table-layout: fixed; margin: 0 auto;">
        	<tr>
-        	<td align="center" valign="top"  style="padding:40px 0px 0px 0px;"><img src="symptoms_top.png" width="131" height="132" alt="" /></td>
+        	<td align="center" valign="top"  style="padding:40px 0px 0px 0px;"><img src="symptoms_top.png" width="100" height="100" alt="" /></td>
       	</tr>
         
         <tr>
