HTML Content update

--- a/CardioHealth/Resources/HTMLContent/10study_task.html
+++ b/CardioHealth/Resources/HTMLContent/10study_task.html
@@ -12,7 +12,9 @@
 
 
 
-<p></p>
+<p style="padding-top:15px;">Your phone or wearable device will be used to collect regular
+activity data and you will be asked to do a 6-minute walk test. You will also be asked to enter data to
+calculate your risk score.</p>
 
 
 
