--- a/CardioHealth/Resources/HTMLContent/11withdrawing.html
+++ b/CardioHealth/Resources/HTMLContent/11withdrawing.html
@@ -14,7 +14,8 @@
 
 
             
-<p></p>
+<p style="padding-top:15px;">We will not collect or store any new data if you choose to
+withdraw.</p>
 
 
 
