--- a/CardioHealth/Resources/HTMLContent/6protectingdata.html
+++ b/CardioHealth/Resources/HTMLContent/6protectingdata.html
@@ -14,7 +14,7 @@
 
             
 
-<p> De-identification: Your research data from the phone will go to a secure computer where your personal identifiers will be removed to protect your privacy.</p>
+<p style="padding-top:15px;"><strong>De-identification:</strong> Your research data from the phone will go to a secure computer where your personal identifiers will be removed to protect your privacy.</p>
 
 
 
