--- a/CardioHealth/Resources/HTMLContent/7datause.html
+++ b/CardioHealth/Resources/HTMLContent/7datause.html
@@ -14,7 +14,7 @@
 
             
 
-<p>Once your data have had personal identifiers removed, they will go to another secure computer, with the data from other subjects, to be analyzed</p>
+<p style="padding-top:15px;">Once your data have had personal identifiers removed, they will go to another secure computer, with the data from other subjects, to be analyzed</p>
 
 <p>Your de-identified data, when combined with data from many other people, serve as a rich database for research analysis. It also provides a safe way to share the data with other researchers.</p>
 
