--- a/CardioHealth/Resources/HTMLContent/12potentialbenefits1.html
+++ b/CardioHealth/Resources/HTMLContent/12potentialbenefits1.html
@@ -14,7 +14,8 @@
   
   <div class="content">
             
-<p>
+<p style="padding-top:15px;">You will get feedback on your activity, fitness, and heart risk,
+plus you may be asked to try different ways to improve your activity and heart health.
 </p>
 
 
