--- a/CardioHealth/Resources/HTMLContent/3activities.html
+++ b/CardioHealth/Resources/HTMLContent/3activities.html
@@ -11,7 +11,7 @@
 <body>
 
 
-<p>We will ask you to:</p>
+<p style="padding-top:15px;">We will ask you to:</p>
 <ul>
     <li>Answer an initial questionnaire about your health</li> 
     <li>Track changes by answering a weekly and monthly survey</li> 
@@ -20,7 +20,7 @@
    
 </ul>
 <p>
- The <boldie>MyHeartCounts</boldie> app will ask you to do 3 activities: 1) use your phone, or any wearable activity device you have, to collect activity data for 7 days; 2) perform a 6-minute walk test of fitness; and 3) enter information about risk factors and blood tests to calculate your American Heart Association risk score.
+ The <strong>MyHeartCounts</strong> app will ask you to do 3 activities: 1) use your phone, or any wearable activity device you have, to collect activity data for 7 days; 2) perform a 6-minute walk test of fitness; and 3) enter information about risk factors and blood tests to calculate your American Heart Association risk score.
 
 
 
