--- a/CardioHealth/Resources/HTMLContent/4sensordata.html
+++ b/CardioHealth/Resources/HTMLContent/4sensordata.html
@@ -13,10 +13,10 @@
 
             
 
-<p> There are sensors in your phone that can help assess activity, plus Apple’s Health app on your phone can store health and activity data from other devices. 
+<p> There are sensors in your phone that can help assess activity, plus Apple’s Health app on your phone can store health and activity data from other devices.</p>
 
+<p>We will NOT access your personal contacts, other applications, personal photos, texts, or email messages.</p> 
 
-</p>
 
 	
 </body>
