--- a/CardioHealth/Resources/HTMLContent/EligibleToParticipate.html
+++ b/CardioHealth/Resources/HTMLContent/EligibleToParticipate.html
@@ -19,7 +19,7 @@
    <p><img class="displayed" src="disease_information_top.png" width="90" height="76" alt="App Logo" id="Insert_logo" style="background-color: #FFFFFF; display:block;" /></p>
    <p>&nbsp;</p>
    
-   <p>All adults over 18 years old and living in the United States are eligible. You must also have an iPhone 5s, 6, or 6 plus, as these have special motion sensors built in. Finally, you need to be able to read and understand English, though versions in other languages will be available in the future.</p>
+   <p>All adults over 18 years old and living in the United States are eligible. You must also have an iPhone 5s, 6, or 6 plus, as these have special motion sensors built in that do not drain your battery. Finally, you need to be able to read and understand English. Versions in other languages and for outside the U.S. will be available in the future.</p>
 <p>&nbsp;</p>
 	<div class="footer"><img class="displayed" src="institution.png" width="200" " alt="LOGO" name="FOOTER_IMAGE" style="background-color: #FFFFFF; display:block;" /></div> 
     
