--- a/CardioHealth/Resources/HTMLContent/howstudyworks_intro.html
+++ b/CardioHealth/Resources/HTMLContent/howstudyworks_intro.html
@@ -14,10 +14,10 @@
 <div class="container">
   
   <div class="content">
-            <h1>How this Study works</h1>
-            <p>If you provide consent, you will be asked to allow the <boldie>MyHeartCounts</boldie> app to collect health and activity data from your phone or wearable device, plus answer survey questions about any history of cardiovascular disease and risk factors.</p>
+            <h1>How this Study Works</h1>
+            <p>If you provide consent, you will be asked to allow the <boldie>MyHeart Counts</boldie> app to collect health and activity data from your phone or wearable device, plus answer survey questions about any history of cardiovascular disease and risk factors.</p> 
             
-            <p>The app will collect activity data for 7 days and ask you to do a 6-minute walk test. It should take less than 15 minutes per day. The MyHeartCounts app will provide you with feedback, including a risk score and &ldquo;heart age&rdquo; plus where you can improve. You can continue to use the app for activity monitoring and the app will check back every 3 months to have you update your data. The MyHeartCounts app will also provide educational links to learn more about any of your data. You may also be asked to try different ways to help you improve your activity and heart health. </p>
+            <p>The app will collect activity data for 7 days and ask you to do a 6-minute walk test. It should take less than 15 minutes per day. The <boldie>MyHeart Counts</boldie> app will provide you with feedback, including a risk score and &ldquo;heart age&rdquo; plus where you can improve. You can continue to use the app for activity monitoring and the app will check back every 3 months to have you update your data. The <boldie>MyHeart Counts</boldie> app will also provide educational links to learn more about any of your data. You may also be asked to try different ways to help you improve your activity and heart health. </p>
 </div>
 </div>
 
