--- a/CardioHealth/Resources/HTMLContent/15privacy_risk.html
+++ b/CardioHealth/Resources/HTMLContent/15privacy_risk.html
@@ -16,7 +16,7 @@
 
 
   
- 	<p style="padding-top:15px;">We view your privacy very strongly. Thus, we are requesting the least amount of personal data possible. Also, we are using strict security protocols to protect your data. Importantly, your personal identifiers will be removed before the data goes to the large computer for storage and later analysis. We cannot completely guarantee that someone cannot can gain access to your private data, but importantly the main data storage is de-identified.</p>  
+ 	<p style="padding-top:15px;">We view your privacy very strongly. Thus, we are requesting the least amount of personal data possible. Also, we are using strict security protocols to protect your data. Importantly, your name will be replaced with a random code before the data goes to the large computer for storage and later analysis. We cannot completely guarantee that someone cannot can gain access to your private data, but importantly the main data storage is secure, encrypted, and does not contain your name.</p>  
 
 
 
