--- a/CardioHealth/Resources/HTMLContent/7datause.html
+++ b/CardioHealth/Resources/HTMLContent/7datause.html
@@ -14,9 +14,7 @@
 
             
 
-<p style="padding-top:15px;">Once your data have had personal identifiers removed, they will go to another secure computer, with the data from other subjects, to be analyzed</p>
-
-<p>Your de-identified data, when combined with data from many other people, serve as a rich database for research analysis. It also provides a safe way to share the data with other researchers.</p>
+<p style="padding-top:15px;">Your coded study data will be combined with data from other participants for analysis. This provides a rich database for research. It also provides a safe way to share the data with other researchers approved by Stanford to learn more about cardiovascular disease.</p>
 
 
 
