--- a/CardioHealth/Resources/HTMLContent/AboutStudy.html
+++ b/CardioHealth/Resources/HTMLContent/AboutStudy.html
@@ -18,8 +18,9 @@
   
    <p><img class="displayed" src="disease_information_top.png" width="90" height="76" alt="App Logo" id="Insert_logo" style="background-color: #FFFFFF; display:block;" /></p>
    <p>&nbsp;</p>
-            <p>Welcome to the <boldie>MyHeartCounts</boldie> research study!</p>
-            <p>We are asking you to “donate” data about your physical activity and sleep, and assess your fitness and risk factors, to better understand how to have a healthy heart. Being active every day helps to prevent heart disease, based on survey data, but we now can measure activity in much more detail with smartphones and wearable devices. With your help, we can count on your data, combined with data from friends, family, and many others, to help us determine more precisely the best type and amount of activity to stay healthy over a long life.</p>
+             <p>Welcome to the <boldie>MyHeart Counts</boldie> research study!</p>
+            <p>We are asking you to join in a global study of cardiovascular health. Through your phone (or wearable band or smartwatch), we make it easy to “donate” data about your physical activity and sleep, and assess your fitness and risk factors, to better understand how to have a healthy heart. </p>
+            <p>Being active every day helps to prevent heart disease, but we now can measure activity in much more detail with smartphones and wearable devices. With your help, we can make your heart count in the fight to stop heart disease and stroke. Combining your data with friends, family, and many others, you can help us determine how to keep your heart healthy over a long life. </p>
             
 <p>&nbsp;</p>
 	<div class="footer"><img class="displayed" src="institution.png" width="200"  alt="LOGO" name="FOOTER_IMAGE" style="background-color: #FFFFFF; display:block;" /></div>
