--- a/CardioHealth/Resources/HTMLContent/AboutStudy.html
+++ b/CardioHealth/Resources/HTMLContent/AboutStudy.html
@@ -23,7 +23,7 @@
             <p>Being active every day helps to prevent heart disease, but we now can measure activity in much more detail with smartphones and wearable devices. With your help, we can make your heart count in the fight to stop heart disease and stroke. Combining your data with friends, family, and many others, you can help us determine how to keep your heart healthy over a long life. </p>
             
 <p>&nbsp;</p>
-	<div class="footer"><img class="displayed" src="institution.png" width="200"  alt="LOGO" name="FOOTER_IMAGE" style="background-color: #FFFFFF; display:block;" /></div>
+	<center><img class="displayed" src="institution.png" alt="LOGO" name="FOOTER IMAGE" width="200"  id="Insert_logo" style="background-color: #FFFFFF; display:block;" /></center> 
     
 </div>
 </div>
