--- a/CardioHealth/Resources/HTMLContent/disease_information.html
+++ b/CardioHealth/Resources/HTMLContent/disease_information.html
@@ -32,8 +32,7 @@ in the blood. Quitting smoking is also very important. To learn more about coron
 <p align="center"><a href="http://mylifecheck.heart.org/mobile/iphone/Default.aspx#getactive" style="color:#b91f4b;text-decoration:none; -webkit-tap-highlight-color: rgba(0,0,0,0);">AHA - Life’s Simple 7</a></p>
 
 <p>&nbsp;</p>
-	<div class="footer"><img class="displayed" src="institution.png" width="200"  alt="LOGO" name="FOOTER_IMAGE" style="background-color: #FFFFFF; display:block;" /></div> 
-    
+	<center><img class="displayed" src="institution.png" alt="LOGO" name="FOOTER IMAGE" width="200"  id="Insert_logo" style="background-color: #FFFFFF; display:block;" /></center> 
 </div>
 </div>
                     	
