--- a/CardioHealth/Resources/HTMLContent/8time.html
+++ b/CardioHealth/Resources/HTMLContent/8time.html
@@ -16,7 +16,7 @@
 <p style="padding-top:15px;">We will ask you survey questions and have you use your phone or wearable
 device to collect activity data for 7 days. You will also be asked to do a 6-minute walk test and
 enter blood test data to determine your risk score. You can continue to use the app for activity
-monitoring and it will ask to you update your data every 3 months.”</p> 
+monitoring and it will ask to you update your data every 3 months.</p> 
 
 
 
