--- a/CardioHealth/Resources/HTMLContent/AboutStudy_intro.html
+++ b/CardioHealth/Resources/HTMLContent/AboutStudy_intro.html
@@ -11,16 +11,15 @@
 
 <body>
 
-<div class="container">
+
   
   <div class="content">
             <h1>About this Study</h1>
-            <p>Welcome to the <boldie>MyHeart Counts</boldie> research study!</p>
+            <p>Welcome to the MyHeart Counts research study!</p>
             <p>We are asking you to join in a global study of cardiovascular health. Through your phone (or wearable band or smartwatch), we make it easy to “donate” data about your physical activity and sleep, and assess your fitness and risk factors, to better understand how to have a healthy heart. </p>
             <p>Being active every day helps to prevent heart disease, but we now can measure activity in much more detail with smartphones and wearable devices. With your help, we can make your heart count in the fight to stop heart disease and stroke. Combining your data with friends, family, and many others, you can help us determine how to keep your heart healthy over a long life. </p>
             
-	     
-	</div>
+
 </div>
 
 </body>
