--- a/CardioHealth/Resources/HTMLContent/10study_task.html
+++ b/CardioHealth/Resources/HTMLContent/10study_task.html
@@ -12,9 +12,12 @@
 
 
 
-<p style="padding-top:15px;">Your phone or wearable device will be used to collect regular
-activity data and you will be asked to do a 6-minute walk test. You will also be asked to enter data to
-calculate your risk score.</p>
+<p style="padding-top:15px;">You will be asked to do a Physical Activity Readiness questionnaire, which will advise you about talking to your doctor before increasing physical activity or assessing fitness.</p>
+
+<p>The 7-day activity and sleep assessment will use the sensors in your phone or wearable device in conjunction with the Health app on your iPhone. You will be asked to keep your phone or wearable with you for the 7 days and do your regular activities. There will be a daily check of your sleep and any missed activities.</P
+
+<p>If you are able, after the 7 days there is a 6-minute walk test as an assessment of fitness. This uses the phone (or wearable) to measure the distance you can walk in 6 minutes. This is the only time the app may use GPS information, and only to help measure distance. Your location will not be stored.
+</p>
 
 
 
