--- a/CardioHealth/Resources/HTMLContent/13issues_survey.html
+++ b/CardioHealth/Resources/HTMLContent/13issues_survey.html
@@ -12,7 +12,7 @@
 
 
   
- 	<p> We do ask survey questions about your health history. You may decline to answer if that makes you uncomfortable.</p>
+ 	<p style="padding-top:15px;"> We do ask survey questions about your health history. You may decline to answer if that makes you uncomfortable.</p>
 	
             
 
