--- a/CardioHealth/Resources/HTMLContent/4sensordata.html
+++ b/CardioHealth/Resources/HTMLContent/4sensordata.html
@@ -13,7 +13,7 @@
 
             
 
-<p> There are sensors in your phone that can help assess activity, plus Apple’s Health app on your phone can store health and activity data from other devices.</p>
+<p style="padding-top:15px;"> There are sensors in your phone that can help assess activity, plus Apple’s Health app on your phone can be linked with other devices to collect health and activity data, with your permission.</p>
 
 <p>We will NOT access your personal contacts, other applications, personal photos, texts, or email messages.</p> 
 
