--- a/CardioHealth/Resources/HTMLContent/6protectingdata.html
+++ b/CardioHealth/Resources/HTMLContent/6protectingdata.html
@@ -14,7 +14,7 @@
 
             
 
-<p style="padding-top:15px;">We will use a random code instead of your name on all your study data. The coded study data is also encrypted and stored on a secure server to prevent improper access. This data server is run by Sage Bionetworks, a non-profit research organization. Stanford has secure servers that will store your consent information.</p>
+<p style="padding-top:15px;">We will use a random code instead of your name on all your study data. The coded study data are also encrypted and stored on a secure server to prevent improper access. This data server is run by Sage Bionetworks, a non-profit research organization. Stanford has secure servers that will maintain your consent and personal information.</p>
 
 
 
