--- a/CardioHealth/Resources/HTMLContent/9study_survey.html
+++ b/CardioHealth/Resources/HTMLContent/9study_survey.html
@@ -12,7 +12,7 @@
 
 
             
-<p>We will ask you to answer questions about yourself, your medical history, and current health. You may choose to leave any questions you do not wish to answer blank.  </p> 
+<p style="padding-top:15px;">We will ask you to answer questions about yourself, your medical history, and current health. You may choose to leave any questions you do not wish to answer blank.  </p> 
 
 
 
