--- a/CardioHealth/Resources/HTMLContent/cardio_fullconsent.html
+++ b/CardioHealth/Resources/HTMLContent/cardio_fullconsent.html
@@ -14,7 +14,7 @@
 <p>If you have any questions, concerns or complaints about this research study, its procedures, risks and benefits, or alternative courses of treatment, you should ask the Protocol Director, Dr. Michael V. McConnell, <a href="tel:650-723-7476" value="+16507237476" target="_blank" style="color:#b91f4b;">650-723-7476</a>. You should also contact him/her at any time if you feel you have been hurt by being a part of this study.</p>
 <p>Independent Contact: If you are not satisfied with how this study is being conducted, or if you have any concerns, complaints, or general questions about the research or your rights as a participant, please contact the Stanford Institutional Review Board (IRB) to speak to someone independent of the research team at <a href="tel:650-723-7476" value="+16507237476" target="_blank" style="color:#b91f4b;">(650)-723-5244</a> or toll free at <a href="tel:1-866-680-2906" value="+18666802906" target="_blank" style="color:#b91f4b;">1-866-680-2906</a>. You can also write to the Stanford IRB, Stanford University, 3000 El Camino Real, Five Palo Alto Square, 4th Floor, Palo Alto, CA 94306.</p>
 <p><strong>EXPERIMENTAL SUBJECTS BILL OF RIGHTS:</strong> As a research participant you have the following rights. These rights include but are not limited to the participant's right to:</p>
-<ul>
+<ul style="padding-left:15px;">
   <li>be informed of the nature and purpose of the experiment;</li>
   <li>be given an explanation of the procedures to be followed in the medical experiment, and any drug or device to be utilized;</li>
   <li>be given a description of any attendant discomforts and risks reasonably to be expected;</li>
