--- a/CardioHealth/Resources/HTMLContent/3activities.html
+++ b/CardioHealth/Resources/HTMLContent/3activities.html
@@ -12,8 +12,8 @@
 
 
 
-<p>
- The <strong>MyHeart Counts</strong> app will ask you to do 3 activities: 1) use your phone, or any wearable activity device you have, to collect activity data for 7 days; 2) perform a 6-minute walk test; and 3) enter information about risk factors and blood tests to calculate your risk score and 'heart age'.
+<p style="padding-top:15px;">
+ The <strong>MyHeart Counts</strong> app will ask you to do 3 activities: 1) use your phone, or any wearable activity device you have, to collect activity data for 7 days; 2) if you are able, perform a 6-minute walk test; and 3) enter information about risk factors and blood tests to calculate your risk score and 'heart age'.
 
 
 
