--- a/CardioHealth/Resources/HTMLContent/8time.html
+++ b/CardioHealth/Resources/HTMLContent/8time.html
@@ -15,7 +15,7 @@
             
 <p style="padding-top:15px;">We will ask you survey questions and have you use your phone or wearable
 device to collect activity data for 7 days. After that, if you are able, there is a 6-minute walk test. You will also need to have your blood pressure and cholesterol information in order to determine your risk score and ‘heart age’. You can continue to use the app for activity
-monitoring and it will ask to you update your data every 3 months.</p> 
+monitoring and it will ask you to update your data every 3 months.</p>
 
 
 
