--- a/CardioHealth/Resources/HTMLContent/11withdrawing.html
+++ b/CardioHealth/Resources/HTMLContent/11withdrawing.html
@@ -16,6 +16,7 @@
             
 <p style="padding-top:15px;">We will not collect or store any new data if you choose to
 withdraw.</p>
+<p>To withdraw the study, simply select "Leave Study" on the profile tab.</p>"
 
 
 
