--- a/CardioHealth/Resources/HTMLContent/PrivacyPolicy.html
+++ b/CardioHealth/Resources/HTMLContent/PrivacyPolicy.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<script type="text/javascript"> window.location = "http://www.apple.com/" </script>
+<script type="text/javascript"> window.location = "http://myheartcounts.stanford.edu/privacy.html" </script>
 
 
 </body>
