--- a/CardioHealth/Resources/HTMLContent/disease_information.html
+++ b/CardioHealth/Resources/HTMLContent/disease_information.html
@@ -29,7 +29,7 @@ in the blood. Quitting smoking is also very important. To learn more about coron
 <p align="center"><a href="http://stanfordhealthcare.org/medical-conditions/brain-and-nerves/stroke.html" style="color:#b91f4b;text-decoration:none; -webkit-tap-highlight-color: rgba(0,0,0,0);">Stroke Information</a><br /><br /></p>
 
 <p>To learn more about preventing cardiovascular disease, including heart attacks and strokes, please visit the American Heart Association’s website on Life’s Simple 7.</p>
-<p align="center"><a href="http://mylifecheck.heart.org/mobile/iphone/Default.aspx#getactive" style="color:#b91f4b;text-decoration:none; -webkit-tap-highlight-color: rgba(0,0,0,0);">AHA - Life’s Simple 7</a></p>
+<p align="center"><a href="http://www.heart.org/HEARTORG/Conditions/My-Life-Check---Lifes-Simple-7_UCM_471453_Article.jsp#mainContent" style="color:#b91f4b;text-decoration:none; -webkit-tap-highlight-color: rgba(0,0,0,0);">AHA - Life’s Simple 7</a></p>
 
 <p>&nbsp;</p>
 	<center><img class="displayed" src="institution.png" alt="LOGO" name="FOOTER IMAGE" width="200"  id="Insert_logo" style="background-color: #FFFFFF; display:block;" /></center> 
