Updated content, privacy policy.

--- a/CardioHealth/Resources/HTMLContent/AboutStudy_intro.html
+++ b/CardioHealth/Resources/HTMLContent/AboutStudy_intro.html
@@ -20,6 +20,8 @@
             <p>Being active every day helps to prevent heart disease, but we now can measure activity in much more detail with smartphones and wearable devices. With your help, we can make your heart count in the fight to stop heart disease and stroke. Combining your data with friends, family, and many others, you can help us determine how to keep your heart healthy over a long life. </p>
             <p>MyLifeCheck materials are &copy; of the American Heart Association.</p>
             
+            <br/>
+            <p><a href="PrivacyPolicy.html" style="font-size:13pt;">View privacy policy.</a></p>
 
 </div>
 
