Update privacy policy on cardio

--- a/CardioHealth/Resources/HTMLContent/AboutStudy_intro.html
+++ b/CardioHealth/Resources/HTMLContent/AboutStudy_intro.html
@@ -21,7 +21,7 @@
             <p>MyLifeCheck materials are &copy; of the American Heart Association.</p>
             
             <br/>
-            <p><a href="PrivacyPolicy.html" style="font-size:13pt;">View privacy policy.</a></p>
+            <p><a href="http://myheartcounts.stanford.edu/privacy.html" style="font-size:13pt;">View privacy policy.</a></p>
 
 </div>
 
